--- a/TeacherApp/templates/editstudent.html
+++ b/TeacherApp/templates/editstudent.html
@@ -33,24 +33,24 @@
                         <div class="mb-3">
                                 <label class="form-label">Batch</label>
                                 <select name="student_batch" class="form-control">
-                                    <option value="">{{student.Student_batch}}</option>
-                                    <option value="CSE">CSE</option>
-                                    <option value="EC">EC</option>
-                                    <option value="EEE">EEE</option>
-                                    <option value="CE">CE</option>
+                                    <option >{{student.Student_batch}}</option>
+                                    <option >CSE</option>
+                                    <option >EC</option>
+                                    <option >EEE</option>
+                                    <option >CE</option>
                                 </select>
                         </div>
 
                         <div class="mb-3">
                 <label class="form-label">Semester</label>
                 <select name="student_sem" class="form-control">
-                    <option value="">{{student.Student_sem}}</option>
-                    <option value="S1">S1</option>
-                    <option value="S2">S2</option>
-                    <option value="S3">S3</option>
-                    <option value="S4">S4</option>
-                    <option value="S5">S5</option>
-                    <option value="S6">S6</option>
+                    <option >{{student.Student_sem}}</option>
+                    <option >S1</option>
+                    <option >S2</option>
+                    <option >S3</option>
+                    <option >S4</option>
+                    <option >S5</option>
+                    <option >S6</option>
                 </select>
             </div>
 
