--- a/TeacherApp/templates/addsubject.html
+++ b/TeacherApp/templates/addsubject.html
@@ -8,7 +8,7 @@
     <div class="card shadow-lg p-4">
         <h3 class="text-center mb-4">Add Subject</h3>
 
-        <form method="POST">
+        <form method="POST" action="{% url 'savesubject' %}">
             {% csrf_token %}
 
             <div class="mb-3">
@@ -22,28 +22,35 @@
             </div>
 
             <div class="mb-3">
+                <label class="form-label">Teacher</label>
+                <input type="text" name="subject_teacher" placeholder="Teacher" class="form-control">
+            </div>
+
+            <div class="mb-3">
                 <label class="form-label">Semester</label>
                 <select name="subject_sem" class="form-control">
-                    <option value="">-- Select Semester --</option>
-                    <option value="S1">S1</option>
-                    <option value="S2">S2</option>
-                    <option value="S3">S3</option>
-                    <option value="S4">S4</option>
-                    <option value="S5">S5</option>
-                    <option value="S6">S6</option>
+                    <option>-- Select Semester --</option>
+                    <option >S1</option>
+                    <option >S2</option>
+                    <option >S3</option>
+                    <option >S4</option>
+                    <option >S5</option>
+                    <option >S6</option>
                 </select>
             </div>
 
             <div class="mb-3">
                 <label class="form-label">Department</label>
                 <select name="subject_dep" class="form-control">
-                    <option value="">-- Select Department --</option>
-                    <option value="CSE">CSE</option>
-                    <option value="EC">EC</option>
-                    <option value="EEE">EEE</option>
-                    <option value="CE">CE</option>
+                    <option >-- Select Department --</option>
+                    <option >CSE</option>
+                    <option >EC</option>
+                    <option >EEE</option>
+                    <option >CE</option>
                 </select>
             </div>
+
+
 
             <div class="text-center">
             <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">
