--- a/TeacherApp/templates/displaysubject.html
+++ b/TeacherApp/templates/displaysubject.html
@@ -1,10 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
-</html>
+{% extends 'index.html' %}
+{% load static %}
+{% block content %}
+
+ <div class="container mt-5">
+        <div class="table-responsive" style="text-align:justify;">
+            <table>
+                <thead>
+                <tr>
+                    <th>Subject Name</th>
+                    <th>Subject Code</th>
+                    <th>Subject Teacher</th>
+                    <th>Subject Semester</th>
+                    <th>Subject Department</th>
+                    <th>Options</th>
+                    <th>Options</th>
+                </tr>
+                </thead>
+
+                <tbody>
+                {% for i in data %}
+                <tr>
+                    <td>{{i.Subject_name}}</td>
+                    <td>{{i.Subject_code}}</td>
+                    <td>{{i.Subject_teacher}}</td>
+                    <td>{{i.Subject_sem}}</td>
+                    <td>{{i.Subject_dep}}</td>
+                    <td>
+                        <a href="{% url 'EditsubjectPage' sub_id=i.id %}">
+                            <button type="submit" class="btn btn-success" >Edit</button>
+                        </a>
+                    </td>
+                    <td>
+                        <a href="{% url 'Deletesubject' sub_id=i.id %}">
+                            <button type="submit" class="btn btn-danger" >Delete</button>
+                        </a>
+                    </td>
+                </tr>
+                {% endfor %}
+                </tbody>
+
+            </table>
+
+        </div>
+    </div>
+
+
+{% endblock %}
