--- a/TeacherApp/templates/index.html
+++ b/TeacherApp/templates/index.html
@@ -71,13 +71,13 @@
           <label>Student Details</label>
           <i data-feather="feather"></i>
         </li>
-        <li class="pc-item pc-hasmenu">
+        <li class="pc-item ">
           <a href="{% url 'Addstudentpage' %}" class="pc-link">
             <span class="pc-micon"> <i data-feather="edit"></i></span>
             <span class="pc-mtext">Add Student Details</span>
           </a>
         </li>
-        <li class="pc-item pc-hasmenu">
+        <li class="pc-item ">
           <a href="{% url 'DisplaystudentPage' %}" class="pc-link">
             <span class="pc-micon"> <i data-feather="type"></i></span>
             <span class="pc-mtext">View Student Details</span>
@@ -94,14 +94,14 @@
           <label>Subject Details</label>
           <i data-feather="monitor"></i>
         </li>
-        <li class="pc-item pc-hasmenu">
-          <a href="{% url 'AddsubjectPage' %}" class="pc-link" target="_blank">
+        <li class="pc-item ">
+          <a href="{% url 'AddsubjectPage' %}" class="pc-link" >
             <span class="pc-micon"> <i data-feather="lock"></i></span>
             <span class="pc-mtext">Add Subject</span>
           </a>
         </li>
-        <li class="pc-item pc-hasmenu">
-          <a href="{% url 'DisplaysubjectPage' %}" class="pc-link" target="_blank">
+        <li class="pc-item ">
+          <a href="{% url 'DisplaysubjectPage' %}" class="pc-link">
             <span class="pc-micon"> <i data-feather="user-plus"></i></span>
             <span class="pc-mtext">View Subjects</span>
           </a>
