--- a/TeacherApp/templates/index.html
+++ b/TeacherApp/templates/index.html
@@ -282,7 +282,7 @@
                   </div>
                   <div class="grow ltr:text-right rtl:text-left">
                     <h3 class="mb-2">12,281</h3>
-                    <h5 class="text-success-500 mb-0">+7.2% <span class="text-muted">Total Likes</span></h5>
+                    <h5 class="text-success-500 mb-0">+7.2% <span class="text-muted">Total Like</span></h5>
                   </div>
                 </div>
               </div>
