--- a/TeacherApp/templates/displaystudent.html
+++ b/TeacherApp/templates/displaystudent.html
@@ -34,7 +34,7 @@
                     <td>{{ i.Student_regid }}</td>
                     <td>{{ i.Student_batch }}</td>
                     <td>{{ i.Student_sem }}</td>
-                    <td>{{ i.Student_duartion }}</td>
+                    <td>{{ i.Student_duration }}</td>
 
                     <td>
                         <a href="{% url 'EditstudentPage' s_id=i.id %}">
