--- a/TeacherApp/templates/index.html
+++ b/TeacherApp/templates/index.html
@@ -194,8 +194,8 @@
       </div>
 
       <ul class="breadcrumb">
-        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-        <li class="breadcrumb-item"><a href="javascript: void(0)">Dashboard</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'Indexpage' %}">Home</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'Indexpage' %}">Dashboard</a></li>
         <li class="breadcrumb-item" aria-current="page">Default</li>
       </ul>
     </div>
