commit 7 (add mobile to studentdb)

--- a/TeacherApp/templates/displaystudent.html
+++ b/TeacherApp/templates/displaystudent.html
@@ -5,7 +5,7 @@
 <div class="container mt-5">
 
     <div class="table-responsive shadow-sm p-3 bg-white rounded">
-        <table class="table table-bordered table-hover align-middle text-center">
+        <table class="table table-bordered table-hover align-middle" style="text-align:justify;">
 
             <thead class="table-dark">
                 <tr>
@@ -16,7 +16,7 @@
                     <th>Batch</th>
                     <th>Semester</th>
                     <th>Duration</th>
-                    <th colspan="2">Actions</th>
+                    <th colspan="2" style="text-align:center;">Actions</th>
                 </tr>
             </thead>
 
