--- a/TeacherApp/templates/displaysubject.html
+++ b/TeacherApp/templates/displaysubject.html
@@ -5,7 +5,7 @@
 <div class="container mt-5">
 
     <div class="table-responsive shadow-sm p-3 bg-white rounded">
-        <table class="table table-bordered table-hover text-center align-middle">
+        <table class="table table-bordered table-hover" style="text-align:justify;">
 
             <thead class="table-dark">
                 <tr>
@@ -14,7 +14,7 @@
                     <th>Subject Teacher</th>
                     <th>Semester</th>
                     <th>Department</th>
-                    <th colspan="2">Actions</th>
+                    <th colspan="2" style="text-align:center;" >Actions</th>
                 </tr>
             </thead>
 
