--- a/TeacherApp/templates/addstudent.html
+++ b/TeacherApp/templates/addstudent.html
@@ -60,6 +60,12 @@
                         </div>
 
                         <div class="mb-3">
+                            <label class="form-label">Mobile Number</label>
+                            <input type="tel" minlength="10" maxlength="10" pattern="[0-9]{10}" placeholder="Mobile Number" name="student_phone" class="form-control">
+                        </div>
+
+
+                        <div class="mb-3">
                             <label class="form-label">Profile Image</label>
                             <input type="file" placeholder="Upload Your Profile Image" name="student_prof" class="form-control">
                         </div>
