--- a/TeacherApp/templates/editstudent.html
+++ b/TeacherApp/templates/editstudent.html
@@ -60,6 +60,11 @@
                         </div>
 
                         <div class="mb-3">
+                            <label class="form-label">Mobile Number</label>
+                            <input type="tel" minlength="10" maxlength="10" pattern="[0-9]{10}" placeholder="Mobile Number" name="student_phone" class="form-control" value="{{student.Student_phone}}">
+                        </div>
+
+                        <div class="mb-3">
                             <img src="{{student.Student_prof.url}}" height="150px" width="150px" >
                             <label class="form-label">Profile Image</label>
                             <input type="file" placeholder="Upload Your Profile Image" name="student_prof" class="form-control">
