commit 10 (Internal mark CRUD performed )

--- a/TeacherApp/templates/index.html
+++ b/TeacherApp/templates/index.html
@@ -68,7 +68,7 @@
           </a>
         </li>
         <li class="pc-item pc-caption">
-          <label>Student Details</label>
+          <label>Student </label>
           <i data-feather="feather"></i>
         </li>
         <li class="pc-item ">
@@ -86,7 +86,7 @@
 
 
         <li class="pc-item pc-caption">
-          <label>Subject Details</label>
+          <label>Subject </label>
           <i data-feather="monitor"></i>
         </li>
         <li class="pc-item ">
@@ -102,6 +102,60 @@
           </a>
         </li>
 
+
+
+            <li class="pc-item pc-caption">
+          <label>Internal Mark</label>
+          <i data-feather="monitor"></i>
+        </li>
+        <li class="pc-item ">
+          <a href="{% url 'Addinternalpage' %}" class="pc-link" >
+            <span class="pc-micon"> <i data-feather="lock"></i></span>
+            <span class="pc-mtext">Add Internal Mark</span>
+          </a>
+        </li>
+        <li class="pc-item ">
+          <a href="{% url 'Displayinternal' %}" class="pc-link">
+            <span class="pc-micon"> <i data-feather="user-plus"></i></span>
+            <span class="pc-mtext">View Internal Mark</span>
+          </a>
+        </li>
+
+            <li class="pc-item pc-caption">
+          <label>QR Code</label>
+          <i data-feather="monitor"></i>
+        </li>
+        <li class="pc-item ">
+          <a href="#" class="pc-link" >
+            <span class="pc-micon"> <i data-feather="lock"></i></span>
+            <span class="pc-mtext">QR Code</span>
+          </a>
+        </li>
+        <li class="pc-item ">
+          <a href="#" class="pc-link">
+            <span class="pc-micon"> <i data-feather="user-plus"></i></span>
+            <span class="pc-mtext">View Attendance Details</span>
+          </a>
+        </li>
+          <li class="pc-item ">
+          <a href="#" class="pc-link">
+            <span class="pc-micon"> <i data-feather="user-plus"></i></span>
+            <span class="pc-mtext">View Total Attendance</span>
+          </a>
+        </li>
+
+
+
+          <li class="pc-item pc-caption">
+          <label>Messenger</label>
+          <i data-feather="monitor"></i>
+        </li>
+        <li class="pc-item ">
+          <a href="#" class="pc-link" >
+            <span class="pc-micon"> <i data-feather="lock"></i></span>
+            <span class="pc-mtext">Message</span>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
