commit 12 (pip install qrcode[pil] and pip upgrade) made changes to icons in nav bar

--- a/TeacherApp/templates/editsubject.html
+++ b/TeacherApp/templates/editsubject.html
@@ -5,7 +5,7 @@
 <div class="col-md-6">
 
     <div class="card shadow-lg p-4">
-        <h3 class="text-center mb-4">Add Subject</h3>
+        <h3 class="text-center mb-4">Edit Subject</h3>
 
         <form method="POST" action="{% url 'Updatesubject' sub_id=subject.id %}">
             {% csrf_token %}
@@ -51,7 +51,7 @@
 
             <div class="text-center">
             <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">
-                Save Subject
+                Update
             </button>
             </div>
 
