--- a/TeacherApp/templates/editstudent.html
+++ b/TeacherApp/templates/editstudent.html
@@ -8,7 +8,7 @@
             <div class="col-md-6">
 
                 <div class="card shadow-lg p-4" style="border:1px solid lightgrey; border-radius:10px;">
-                    <h3 class="text-center mb-4" style="font-size:30px; font-family:Arial; font-weight:bold; color:darkblue;">Add Student</h3>
+                    <h3 class="text-center mb-4" style="font-size:30px; font-family:Arial; font-weight:bold; color:darkblue;">Edit Student</h3>
 
                     <form method="POST" enctype="multipart/form-data" action="{% url 'updatestudent' s_id=student.id %}">
                         {% csrf_token %}
@@ -72,7 +72,7 @@
 
                         <div class="text-center">
                         <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">
-                            Save Student
+                            Update
                         </button>
                         </div>
                     </form>
