commit 14 (add and edit sub heading weight and style change)

--- a/TeacherApp/templates/addsubject.html
+++ b/TeacherApp/templates/addsubject.html
@@ -6,7 +6,7 @@
 <div class="col-md-6">
 
     <div class="card shadow-lg p-4">
-        <h3 class="text-center mb-4" style="color:darkblue;">Add Subject</h3>
+        <h3 class="text-center mb-4" style="color:darkblue; font-weight:bold; font-size:30px; font-family:Arial;">Add Subject</h3>
 
         <form method="POST" action="{% url 'savesubject' %}">
             {% csrf_token %}
