--- a/TeacherApp/templates/addinternal.html
+++ b/TeacherApp/templates/addinternal.html
@@ -43,7 +43,7 @@
                     </div>
 
                     <div class="text-center">
-                        <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">Upload</button>
+                        <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">Upload Internal</button>
                     </div>
 
                 </form>
