--- a/TeacherApp/templates/editinternal.html
+++ b/TeacherApp/templates/editinternal.html
@@ -41,7 +41,7 @@
                     </div>
 
                     <div class="text-center">
-                        <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">Update</button>
+                        <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">Update Internal</button>
                     </div>
 
                 </form>
