--- a/TeacherApp/templates/editstudent.html
+++ b/TeacherApp/templates/editstudent.html
@@ -72,7 +72,7 @@
 
                         <div class="text-center">
                         <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">
-                            Update
+                            Update Student
                         </button>
                         </div>
                     </form>
