--- a/TeacherApp/templates/editsubject.html
+++ b/TeacherApp/templates/editsubject.html
@@ -51,7 +51,7 @@
 
             <div class="text-center">
             <button type="submit" class="btn btn-primary mt-3" style="width:95%; border-radius:10px;">
-                Update
+                Update Subject
             </button>
             </div>
 
